--- a/public/meta/about/index.html
+++ b/public/meta/about/index.html
@@ -3,7 +3,7 @@
   <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="/images/favicon.png" />
+  <link rel="shortcut icon" href="/images/favicon.ico" />
 
 <title>About&nbsp;|&nbsp;Ranhya</title>
 <meta
@@ -21,7 +21,7 @@ If you like the site you can message me on discord @ranhya and tell me what you 
   content=""
 />
 
-  <meta name="author" content="Shaolong Chen" />
+  <meta name="author" content="Nasu Rei" />
 
 
 
