--- a/public/hidden/p5r-tips/index.html
+++ b/public/hidden/p5r-tips/index.html
@@ -148,7 +148,8 @@ Always carry a persona of the same arcana as the confidant you’re about to han
     <footer>
       
 
-      I drink glue.
+      © Copyright 2025 Nasu Rei of the F.O.G.D (Federation of Glue Drinkers)
+
     </footer>
 
     
