--- a/public/hidden/sekiro-mechanics/index.html
+++ b/public/hidden/sekiro-mechanics/index.html
@@ -154,7 +154,8 @@ Dragon Rot In theory it is a cool mechanic that would impact the way you play—
     <footer>
       
 
-      I drink glue.
+      © Copyright 2025 Nasu Rei of the F.O.G.D (Federation of Glue Drinkers)
+
     </footer>
 
     
