--- a/public/meta/about/index.html
+++ b/public/meta/about/index.html
@@ -131,7 +131,8 @@ If you like the site you can message me on discord @ranhya and tell me what you 
     <footer>
       
 
-      I drink glue.
+      © Copyright 2025 Nasu Rei of the F.O.G.D (Federation of Glue Drinkers)
+
     </footer>
 
     
