--- a/public/offtopic/test/index.html
+++ b/public/offtopic/test/index.html
@@ -124,7 +124,8 @@
     <footer>
       
 
-      I drink glue.
+      © Copyright 2025 Nasu Rei of the F.O.G.D (Federation of Glue Drinkers)
+
     </footer>
 
     
