--- a/public/offtopic/world-trigger/index.html
+++ b/public/offtopic/world-trigger/index.html
@@ -118,7 +118,7 @@ World Trigger is a super underrated shounen battle anime in my opinion. I don’
   
   
   <content>
-    <p><img src="/images/World_Trigger.jpeg" alt="[World Trigger.jpeg]">
+    <p><img src="/images/World_Trigger.jpeg" alt="World Trigger.jpeg">
 <a href="https://anilist.co/manga/78151/">World Trigger</a> is a super underrated shounen battle anime in my opinion. I don’t hear people talking about it like at all even though it’s probably one of the best in the genre. World Trigger has amazing characters and a banger power system—and an interesting plot to top it all off of course. The world building is nothing to scoff at and the show is filled TO THE BRIM with tournament arcs, which we all know everyone loves.</p>
 <p>The main focus of the fights is less on power of friendship suddenly get a boost in strength and instead the focus is on actual strategy and planning with some really cool fights emerging from it. The main character is the stereotypical weak can’t do anything typo of shounen character but instead of powering up significantly he uses his other advantage such as his ability to think clearly under pressure and surprising knowledge of battle tactics along with the advantages of his teammates to form strategies in order to win against the opponents.</p>
 <p>One thing I really like in this show is that the characters actually listen to each other and also respect orders, they don’t do bullshit because they don’t want to or anything.</p>
@@ -131,7 +131,8 @@ World Trigger is a super underrated shounen battle anime in my opinion. I don’
     <footer>
       
 
-      I drink glue.
+      © Copyright 2025 Nasu Rei of the F.O.G.D (Federation of Glue Drinkers)
+
     </footer>
 
     
