--- a/static/testing/Kaba.html
+++ b/static/testing/Kaba.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>私は当時とにかくその支配人という事の時にぶつかっなまし</title>
+	<link rel="stylesheet" href="main.css">
 </head>
 <body>
 <p>私は当時とにかくその支配人という事の時にぶつかっなまし。とうてい事実が相違帰りはどうにかその紹介ざるたまでに這入ってしまいますからは希望あるたたから、そうには困るですりたです。</p>
