--- a/static/testing/test.html
+++ b/static/testing/test.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>test</title>
+	<link rel="stylesheet" href="main.css">
 </head>
 <body>
 <p class="drop-cap">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed maximus enim nec lorem congue, eget tempor dolor fermentum. Maecenas gravida vitae libero vitae bibendum. Maecenas venenatis leo ut pellentesque dignissim. Phasellus volutpat enim velit, quis eleifend arcu consectetur et. Mauris quis augue tellus. Etiam sollicitudin ex id tortor fermentum ultrices. Nam sed maximus velit, eget tincidunt ipsum. Cras viverra lectus non fermentum auctor.</p>
