Testing again gg

--- a/static/testing/test.html
+++ b/static/testing/test.html
@@ -7,15 +7,15 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <figure class="hero">
-      <img src="hero.jpg" alt="Hero Image">
-    </figure>
-  </header>
-
   <main>
     <article>
-      <h1>Lorem Ipsum Dolor Sit Amet</h1>
+      <header>
+        <h1>Lorem Ipsum Dolor Sit Amet</h1>
+        <p class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.</p>
+        <figure class="hero">
+          <img src="hero.jpg" alt="Hero Image">
+        </figure>
+      </header>
 
       <p class="drop-cap">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras venenatis euismod malesuada.
