--- a/static/testing/rgg.html
+++ b/static/testing/rgg.html
@@ -12,7 +12,7 @@
     <h1>Yakuza 7 Gaiden</h1>
     <p class="subtitle">Kiryu is in witness protection, unlike Michael</p>
     <figure>
-      <img src="rgg7gaiden_gouyuu.jpeg" alt="Hero Image">
+      <img src="/images/rgg7gaiden_gouyuu.jpeg" alt="Hero Image">
     </figure>
   </header>
 
@@ -22,7 +22,7 @@
 <p>Speaking of the coliseum—it’s probably one of the best pieces of side content from the yakuza games that I’ve personally got to play. It’s actually decently challenging while not being super annoying at the same time, which I love. Though there are some annoyances that have to do with the whole Team Rumble aspect of the coliseum. That is, having to tend to your fighters gets old real quick. Having to spend like over a minute in between fights to go tend to your fighters and encourage them is annoying and doesn’t add anything to the core loop of the coliseum gameplay. Like sure at a certain point you’ll want to stop and go level up your fighters using items anyways, and that part I have no issue with. But having to encourage a fighter after they die in a fight is just annoying. If you ignore this you are absolutely hampering yourself quite heavily as the Team Rumble fights are definitely not hard enough that you always want your fighters in tip top shape.</p>
 
 <figure>
-<img src="/images/rgg7gaiden_kingryu.jpeg" alt="" />
+<img class="image" src="/images/rgg7gaiden_kingryu.jpeg" alt="" />
 </figure>
 
 <p>As for the other content, for a completionist like myself—the change in the way side stories are handled is both great and not great at the same time. The main charm of Yakuza side stories was that you just never knew when you were going to run into one and what kind of goofy situations you’d end up in. But in Yakuza 7 Gaiden, side stories are relegated to the Akame Network, to start a side story you must go to Akame, which removes a lot of the charm of the random encounter side stories from other games. The side stories themselves are alright. Obviously this side story system is relegated to this game and isn’t the standard for games going forward, and I think for this game it works great and ties into the story quite well.</p>
