I forgot that this is an option that exists and is possible

--- a/static/testing/rgg.html
+++ b/static/testing/rgg.html
@@ -12,7 +12,7 @@
     <h1>Yakuza 7 Gaiden</h1>
     <p class="subtitle">Kiryu is in witness protection, unlike Michael</p>
     <figure>
-      <img src="/images/rgg7gaiden_gouyuu.jpeg" alt="Hero Image">
+      <img style="width:50%;" src="/images/rgg7gaiden_gouyuu.jpeg" alt="Hero Image">
     </figure>
   </header>
 
